--- a/layouts/partials/blocks/about.html
+++ b/layouts/partials/blocks/about.html
@@ -25,7 +25,7 @@
 <!-- About widget -->
 
 
-<div class="row">
+<div class="row people-author-detail-page">
   <div class="col-12">
     <div id="profile">
 
@@ -45,6 +45,7 @@
                 {{ end }}
 
               <p style="text-align: center;">{{- $person_page.Title -}}</p>
+              <div class="intro-content"><p style="text-align: center;">{{- $person_page.Content -}}</p></div>
             </div>
           </div>
 
