--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -6,6 +6,12 @@ $navbar-theme-bg-primary: unset; //导航栏背景色
 $navbar-theme-text-primary: #214986; //导航栏前景文字颜色
 $navbar-theme-top-line-primary: #8dc015; //导航栏顶部横线颜色
 
+$bg-color: #f7f7f7;
+
+
+body {
+  background-color: $bg-color;
+}
 
 .page-header-not-animate   {
 
@@ -45,6 +51,46 @@ h3.article-title a:hover, a:hover {
   font-size: 1rem;
   padding-left: 1rem;
 }
+
+
+
+
+.home-section {
+  background: $bg-color;
+}
+
+
+.wg-lab-intro {
+  padding: 1rem 0;
+  .lab-intro {
+    h1 {
+      text-align: center;
+    }
+    .intro-text {
+      width: 80%;
+      margin:  0 auto;
+      text-align: justify;
+      padding: 1rem 0;
+      line-height: 2rem;
+    }
+  }
+
+
+}
+
+
+
+.people-author-detail-page {
+  .intro-content {
+    width: 80%;
+    margin:  0 auto;
+    text-align: justify;
+    padding: 1rem 0;
+    line-height: 2rem;
+  }
+}
+
+
 
 .home-video-wrapper {
   height: 428px;
@@ -256,7 +302,7 @@ h3.article-title a:hover, a:hover {
 }
 
 .copy {
-  margins-top: 6rem;
+  margin-top: 6rem;
 }
 
 
