--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -1,5 +1,5 @@
 <div class="copy" >
   <div class="container">
-    <p>Copyright 2021 © Industrial Intelligence & Reliability Lab </p>
+    <p>Copyright 2025 © {{site.Title}} </p>
   </div>
 </div>
